better fit explaination

--- a/Lab5.ipynb
+++ b/Lab5.ipynb
@@ -107,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -177,7 +179,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> I have used a library called ROOT which is a python wrapper for a set of C code that was developed by CERN. It is an absolute nightmare to download, since physicists are not the best software engineers, so I know that most people will not be able to run the code but I really only need it to get a good fit for the position of the 40K and 208Tl peaks. The reason I used ROOT's fit function over scipy's curve fit function is mostly because I am more familliar with it but also because the fit is very robust and since I only have to fit one spectrum I am eyeing the initial parameters by eye. "
+    "> I have used a library called ROOT which is a python wrapper for a set of C code that was developed by CERN. It is an absolute nightmare to download, since physicists are not the best software engineers, so I know that most people will not be able to run the code but I really only need it to get a good fit for the position of the 40K and 208Tl peaks. The reason I used ROOT's fit function over scipy's curve fit function is mostly because I am more familliar with it but also because the fit is very robust and since I only have to fit one spectrum I am eyeing the initial parameters by eye.\n",
+    "\n",
+    "> The function I am fitting to is $\\displaystyle f(x) = a\\,e^{\\left( \\frac{x\\,-\\,\\mu}{\\sigma} \\right)^2} + e^{mx\\,+\\,b}$, which is a gaussian on top of an exponential. For us $a$ _(p0)_ is the height or number of counts in a peak, $\\mu$ _(p1)_ is the position of the center of the peak, $\\sigma$ _(p2)_ is the width of the peak, $b$ _(p3)_ is the intercept of the background exponential, and $m$ _(p4)_ is the slope of the background exponential."
    ]
   },
   {
@@ -310,6 +314,13 @@
    "source": [
     "> I have chosen three random events to plot the waveforms for. You can see that some waveforms have a more sharpe transition into the charge bleed off and some are more gradual. You can also see that some waveforms are more noisy than others. We use many different types of waveform filters to smooth out the signal but the main one is called a trapazoid filter, however in the raw data this is not shown. I unfortunately couldn't find a multi-site event, my computer just can't process that much data so I would have to spend some time integrating the waveforms until I found one that could be a multi-site event waveform."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
